# vitacompanion

./: CMakeLists.txt  README.md  loaderCompanion.yml  vitacompanion.emd
VCKernel/: CMakeLists.txt  VCKernel.emd
VCKernel/include/: print.h  usb.h
VCKernel/src/: main.c  usb.c
include/: cmd.h  cmd_definitions.h  common.h  compressed_file.h  dialog.h  ftpvita.h  main.h  netmgr.h  print.h  promote.h  usb.h  widgets.h  zip.h
src/: Archives.c  cmd.cpp  cmd_definitions.c  cmd_definitions.cpp  cmd_definitions.h  compressed_file.cpp  dialog.cpp  ftpvita.c  log.h  main.cpp  main.h  net.c  netmgr.c  netmgr.cpp  promote.c  sha1.c  usb.c  usb.cpp  usb.h  widgets.cpp  zip.cpp
